crates/matrix-sdk-common/src/snapshots/matrix_sdk_common__deserialized_responses__tests__encryption_info_migration.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: deserialized
---
{
  "sender": "@alice:localhost",
  "sender_device": "ABCDEFGH",
  "forwarder": null,
  "forwarder_device": null,
  "algorithm_info": {
    "MegolmV1AesSha2": {
      "curve25519_key": "curvecurvecurve",
      "sender_claimed_keys": {},
      "session_id": "mysessionid76"
    }
  },
  "verification_state": "Verified"
}
