crates/matrix-sdk-common/src/snapshots/matrix_sdk_common__deserialized_responses__tests__snapshot_test_algorithm_info.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: "serde_json::to_value(&info).unwrap()"
---
{
  "MegolmV1AesSha2": {
    "curve25519_key": "curvecurvecurve",
    "sender_claimed_keys": {
      "curve25519": "claimedclaimedcurve25519",
      "ed25519": "claimedclaimeded25519"
    }
  }
}
