crates/matrix-sdk-common/src/snapshots/matrix_sdk_common__deserialized_responses__tests__snapshot_test_encryption_info.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: "serde_json::to_value(&info).unwrap()"
---
{
  "algorithm_info": {
    "MegolmV1AesSha2": {
      "curve25519_key": "curvecurvecurve",
      "sender_claimed_keys": {}
    }
  },
  "sender": "@alice:localhost",
  "sender_device": "ABCDEFGH",
  "verification_state": "Verified"
}
