crates/matrix-sdk-common/src/snapshots/matrix_sdk_common__deserialized_responses__tests__snapshot_test_shield_states-3.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: "serde_json::to_value(&state).unwrap()"
---
{
  "Grey": {
    "code": "AuthenticityNotGuaranteed",
    "message": "authenticity of this message cannot be guaranteed"
  }
}
